src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>DesignWinFormula__c</fullName>
        <description>Chewbacca</description>
        <formula>IF(AND(OR(TEXT(Industry_Segment__c) =&quot;Automotive&quot;, TEXT(Industry_Segment__c) =&quot;Healthcare&quot;),
OR(YEAR(Production_Date__c )=2010,Production_Date__c=DATE(2011,01,01))), X2011_Value__c+ X2012_Value__c+X2013_Value__c+X2014_Value__c, 
IF(AND(OR(TEXT(Industry_Segment__c) &lt;&gt;&quot;Automotive&quot;, TEXT(Industry_Segment__c)&lt;&gt;&quot;Healthcare&quot;), 
OR(YEAR(Production_Date__c )=2010,Production_Date__c=DATE(2011,01,01))), 
X2011_Value__c+ X2012_Value__c+X2013_Value__c, 
IF(AND(OR(TEXT(Industry_Segment__c) =&quot;Automotive&quot;, TEXT(Industry_Segment__c) =&quot;Healthcare&quot;),
OR(YEAR(Production_Date__c )=2011,Production_Date__c=DATE(2012,01,01))), 
X2012_Value__c+ X2013_Value__c+X2014_Value__c+X2015_Value__c, 
IF(AND(OR( TEXT(Industry_Segment__c) &lt;&gt;&quot;Automotive&quot;, TEXT(Industry_Segment__c)&lt;&gt;&quot;Healthcare&quot;), 
OR(YEAR(Production_Date__c )=2011,Production_Date__c=DATE(2012,01,01))), 
X2012_Value__c+ X2013_Value__c+X2014_Value__c, 
IF(AND(OR(TEXT(Industry_Segment__c) =&quot;Automotive&quot;, TEXT(Industry_Segment__c) =&quot;Healthcare&quot;),
OR(YEAR(Production_Date__c )=2012,Production_Date__c=DATE(2013,01,01))), 
X2013_Value__c+ X2014_Value__c+X2015_Value__c+X2016_Value__c, 
IF(AND(OR( TEXT(Industry_Segment__c) &lt;&gt;&quot;Automotive&quot;, TEXT(Industry_Segment__c)&lt;&gt;&quot;Healthcare&quot;), 
OR(YEAR(Production_Date__c )=2012,Production_Date__c=DATE(2013,01,01))), 
X2013_Value__c+ X2014_Value__c+X2015_Value__c, 
IF(AND(OR(TEXT(Industry_Segment__c) =&quot;Automotive&quot;, TEXT(Industry_Segment__c) =&quot;Healthcare&quot;),
OR(YEAR(Production_Date__c )=2013,Production_Date__c=DATE(2014,01,01))), 
X2014_Value__c+ X2015_Value__c+X2016_Value__c+X2017_Value__c, 
IF(AND(OR( TEXT(Industry_Segment__c) &lt;&gt;&quot;Automotive&quot;, TEXT(Industry_Segment__c)&lt;&gt;&quot;Healthcare&quot;), 
OR(YEAR(Production_Date__c )=2013,Production_Date__c=DATE(2014,01,01))), 
X2014_Value__c+ X2015_Value__c+X2016_Value__c, 
IF(AND(OR(TEXT(Industry_Segment__c) =&quot;Automotive&quot;, TEXT(Industry_Segment__c) =&quot;Healthcare&quot;),
OR(YEAR(Production_Date__c )=2014,Production_Date__c=DATE(2015,01,01))), 
X2015_Value__c+ X2016_Value__c+X2017_Value__c+X2018_Value__c, 
IF(AND(OR( TEXT(Industry_Segment__c) &lt;&gt;&quot;Automotive&quot;, TEXT(Industry_Segment__c)&lt;&gt;&quot;Healthcare&quot;), 
OR(YEAR(Production_Date__c )=2014,Production_Date__c=DATE(2015,01,01))), 
X2015_Value__c+ X2016_Value__c+X2017_Value__c, 
IF(AND(OR(TEXT(Industry_Segment__c) =&quot;Automotive&quot;, TEXT(Industry_Segment__c) =&quot;Healthcare&quot;),
OR(YEAR(Production_Date__c )=2015,Production_Date__c=DATE(2016,01,01))), 
X2016_Value__c+ X2017_Value__c+X2018_Value__c+X2019_Value__c, 
IF(AND(OR( TEXT(Industry_Segment__c) &lt;&gt;&quot;Automotive&quot;, TEXT(Industry_Segment__c)&lt;&gt;&quot;Healthcare&quot;), 
OR(YEAR(Production_Date__c )=2015,Production_Date__c=DATE(2016,01,01))), 
X2016_Value__c+ X2017_Value__c+X2018_Value__c, 0 
))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z_OBSOLETED_ Opp.DesignWinFormula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Design_Customer_City__c</fullName>
        <description>Design House Customer City</description>
        <label>Design House Customer City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Customer_Country__c</fullName>
        <description>Design House Customer Country</description>
        <label>Design House Customer Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Customer_GID__c</fullName>
        <description>Design House Customer GID</description>
        <label>Design House Customer GID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Customer_Location__c</fullName>
        <description>Design House Customer Location</description>
        <label>Design House Customer Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Customer_Name__c</fullName>
        <description>Design House Customer Name</description>
        <label>Design House Customer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Customer_State__c</fullName>
        <description>Design House Customer State</description>
        <label>Design House Customer State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Customer_Zip__c</fullName>
        <description>Design House Customer Zip</description>
        <label>Design House Customer Zip</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Reg_Is_Created_By_B2B__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Design Registration Created By B2B Flag</description>
        <label>Design Reg Created By B2B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Reg_Is_Duplicated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Design Registration Duplicate Flag</description>
        <label>Design Reg Duplicated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Reg_Is_Expired__c</fullName>
        <description>Design Registration Expiration Flag</description>
        <formula>Expiration_Date__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design Reg Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Reg_Reject_Reason__c</fullName>
        <description>Design Registration Reject Reason</description>
        <label>Design Reg Reject Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Reg_Status__c</fullName>
        <description>Design Registration Status</description>
        <label>Design Reg Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Reg_Win_Date__c</fullName>
        <description>Design Registration Win Date</description>
        <label>Design Reg Win Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Reg_Win_Status__c</fullName>
        <description>Design Registration Win Status</description>
        <label>Design Reg Win Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Region__c</fullName>
        <label>Design House Customer Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Win_Approval_Date__c</fullName>
        <inlineHelpText>Records the date when the Design Win is approved.</inlineHelpText>
        <label>Design Win Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Win_Approval_Process__c</fullName>
        <label>Design Win Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Win_Submission_Date__c</fullName>
        <inlineHelpText>Records the date when the Design Win was submitted for approval.</inlineHelpText>
        <label>Design Win Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Win_Value__c</fullName>
        <description>Chewbacca</description>
        <inlineHelpText>DW Value based on 3 or 4 year SIP Parameters</inlineHelpText>
        <label>z_OBSOLETED_ Opp. Design Win Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disc_Comm_Prob__c</fullName>
        <formula>Account.Parent.PROBABILITY_Discovery__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Stores the probability of an opportuntiy reaching the Commitment stage for this parent account. Is applies to all opportunties upon creation or change of stage. Calculated yearly based on 2 years history.</inlineHelpText>
        <label>Disc Comm Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discovery_Date__c</fullName>
        <inlineHelpText>The date when Opportunity Stage changes to Discovery.</inlineHelpText>
        <label>Discovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discussion_with_Star_occurred_follow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Discovery Milestone</description>
        <label>INIT - Discussion Occurred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor_Branch_Name__c</fullName>
        <description>This field contains branch name of the distributor</description>
        <label>Distributor Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Name__c</fullName>
        <description>Distributor Name</description>
        <label>Distributor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Tracking_Number__c</fullName>
        <description>This field contains the Opportunity tracking number from a Distributor</description>
        <label>Project Disti Tracking Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVT_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recommendation Milestone</description>
        <label>RECO - EVT Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Customer_City__c</fullName>
        <description>This field contains End customer&apos;s city from DESIGN_REG Table from Model N.</description>
        <label>End Customer City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Country__c</fullName>
        <description>This field contains End customer&apos;s country from DESIGN_REG Table from Model N.</description>
        <label>End Customer Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_District_Code__c</fullName>
        <description>This field contains End customer&apos;s district code from DESIGN_REG Table from Model N.</description>
        <label>End Customer District Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_GID__c</fullName>
        <description>End Customer GID</description>
        <label>End Customer GID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Location__c</fullName>
        <description>End Customer Location</description>
        <label>End Customer Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Name__c</fullName>
        <description>End Customer Name</description>
        <label>End Customer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Region__c</fullName>
        <description>End Customer Region</description>
        <label>End Customer Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Sales_Org_Code__c</fullName>
        <description>This field contains End customer&apos;s sales org code from Model N.</description>
        <label>End Customer Sales Org Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_State__c</fullName>
        <description>End Customer State</description>
        <label>End Customer State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Zip__c</fullName>
        <description>This field contains End customer&apos;s ZIP Code from DESIGN_REG Table from Model N.</description>
        <label>End Customer Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceed_5M_USD_Date__c</fullName>
        <description>1508 Release. To keep track of the date when Opp. DW Claim Value excl. Thrust (USD) exceeds 5MUSD.</description>
        <inlineHelpText>This field will capture the date of “Opp. Claim Value excl. Thrust (USD)” exceed 5M USD.”</inlineHelpText>
        <label>Exceed 5M USD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <description>Executive summary of the customer, the application, and the NXP parts used in the Opportunity.</description>
        <inlineHelpText>Executive summary of the customer, the application, and the NXP parts. Do not mentioned final ASP</inlineHelpText>
        <label>Executive Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Expiration Date (SIR#1224)</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gap_of_Opp_and_Prd_Total_Claim_Value__c</fullName>
        <description>Chewbacca</description>
        <formula>Opp_Design_Win_Claim_Value_USD__c -  Product_DW_Claim_Value_Total__c</formula>
        <inlineHelpText>Opp. Design Win Claim Value USD - Product DW Claim Value Total</inlineHelpText>
        <label>z_OBSOLETED_ Gap of Opp and Prd Total CV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Key_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Key Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1zFn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Help_Needed__c</fullName>
        <description>1607 Release SIR 1017 - Probability to Win &amp; Help Needed &amp; Description on Oppty Object</description>
        <inlineHelpText>Describe the internal help that is needed in order to increase Probability to Win to 80%-100%. Used for internal review of funnel.</inlineHelpText>
        <label>z_OBSOLETED_Help Needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Help_Needed_history__c</fullName>
        <description>This field is created to track the History of &apos;Help Needed&apos; Data</description>
        <label>z_OBSOLETED_Help Needed history</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Segment__c</fullName>
        <label>Industry Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Data Processing</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Init_Comm_Prob__c</fullName>
        <formula>Account.Parent.PROBABILITY_Inital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Stores the probability of an opportuntiy reaching the Commitment stage for this parent account. Is applies to all opportunties upon creation or change of stage. Calculated yearly based on 2 years history.</inlineHelpText>
        <label>Init Comm Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Integration_Warning__c</fullName>
        <description>This field is used for integration purpose. It display&apos;s the reason for the opportunities which are assigned to Unknown account.</description>
        <label>Integration Warning</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Concept_realized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Initial Engagement Milestone</description>
        <label>INIT - Internal Concept Realized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Spin_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If an Opportunity is spun off, this field will be checked.</description>
        <inlineHelpText>If an Opportunity is spun off, this field will be checked.</inlineHelpText>
        <label>Is Spin Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LT_Value_USD__c</fullName>
        <description>Opportunity lifetime value in USD.</description>
        <formula>IF (Locked_Exchange_Rate__c &lt;&gt; 0, LT_Value__c / ROUND(Locked_Exchange_Rate__c, 6), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of all products&apos; [Prod LT Value] converted to USD.</inlineHelpText>
        <label>Oppty LT Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LT_Value__c</fullName>
        <description>Opportunity lifetime value in opportunity currency.</description>
        <inlineHelpText>Summary of all products&apos; [Prod LT Value] in opportunity currency. 
Lost/Cancelled products are excluded from this calculation.</inlineHelpText>
        <label>Oppty LT Value</label>
        <summarizedField>OpportunityLineItem.LT_Value__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Business_Modified_By_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to keep track of user who has modified the opportunity in last (Functionally not technically)</description>
        <inlineHelpText>Last user who has updated this record</inlineHelpText>
        <label>Last Business Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesYuYb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Business_Modified_Date__c</fullName>
        <description>Field to keep track of date/time when opportunity was last modified (Functionally not technically)</description>
        <inlineHelpText>Last time this record has been updated</inlineHelpText>
        <label>Last Business Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <label>Lead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Products_Not_found__c</fullName>
        <inlineHelpText>This field captures the products which were ordered by the lead but have a in-active status or not found in SFDC.</inlineHelpText>
        <label>Lead Products Not found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Design_Registration_Number__c</fullName>
        <description>This field contains design registration number i.e, REG_NUM from Model N.</description>
        <label>Design Reg Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_End_Customer_Name_and_Location__c</fullName>
        <description>This field contains End customer&apos;s Name and Location.</description>
        <label>z_OBSOLET_End Customer Name and Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id is required for integration purpose which is OPPORTUNITY_NUM from Model N.</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Opportunity_Owner__c</fullName>
        <label>Legacy Owner Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level1_RVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>z_OBSOLETED_Regional VP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level1_Reg_Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>z_OBSOLETED_Regional Controller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level2_PM10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>z_OBSOLETED_Product Marketing 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesAbqd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level2_PM1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>z_OBSOLETED_Product Marketing 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level2_PM2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>z_OBSOLETED_Product Marketing 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locked_Exchange_Rate__c</fullName>
        <inlineHelpText>The Exchange Rate against USD which is locked when opportunity is Approved</inlineHelpText>
        <label>Locked Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loss_Stage__c</fullName>
        <inlineHelpText>Stage at which the Opportuntiy was lost. Used to more accurately calculate Commitment Probability, eventually. Automatically populated.</inlineHelpText>
        <label>Lost/Cancelled Stage</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Cancelled_Claim_Value_USD__c</fullName>
        <description>Opportunity lost/cancelled claim value in USD.</description>
        <formula>IF (Locked_Exchange_Rate__c &lt;&gt; 0, Lost_Cancelled_Claim_Value__c / ROUND(Locked_Exchange_Rate__c, 6), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of all products&apos; [Prod Lost/Cancelled Claim Value] converted to USD.</inlineHelpText>
        <label>Oppty Lost/Cancelled Claim Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lost_Cancelled_Claim_Value__c</fullName>
        <description>Opportunity lost/cancelled claim value in opportunity currency.</description>
        <inlineHelpText>Summary of all products&apos; [Prod Lost/Cancelled Claim Value] in opportunity currency.</inlineHelpText>
        <label>Oppty Lost/Cancelled Claim Value</label>
        <summarizedField>OpportunityLineItem.Lost_Cancelled_Claim_Value__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lost_Cancelled_LT_Value_USD__c</fullName>
        <description>Opportunity lost/cancelled lifetime value in USD.</description>
        <formula>IF (Locked_Exchange_Rate__c &lt;&gt; 0, Lost_Cancelled_LT_Value__c / ROUND(Locked_Exchange_Rate__c, 6), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of all products&apos; [Prod Lost/Cancelled LT Value] converted to USD.</inlineHelpText>
        <label>Oppty Lost/Cancelled LT Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lost_Cancelled_LT_Value__c</fullName>
        <description>Opportunity lost/cancelled lifetime value in opportunity currency.</description>
        <inlineHelpText>Summary of all products&apos; [Prod Lost/Cancelled LT Value] in opportunity currency.</inlineHelpText>
        <label>Oppty Lost/Cancelled LT Value</label>
        <summarizedField>OpportunityLineItem.Lost_Cancelled_LT_Value__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lost_Date__c</fullName>
        <label>Lost/Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_Description__c</fullName>
        <inlineHelpText>Please provide description of Lost Reason</inlineHelpText>
        <label>Lost/Cancelled Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <inlineHelpText>Please change the Oppty stage to &quot; Cancelled&quot; or &quot; Lost&quot; before modifying Lost/Cancelled Reason.</inlineHelpText>
        <label>Lost/Cancelled Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Changing requirements</fullName>
                </value>
                <value>
                    <fullName>Lack of Technical Support Resources</fullName>
                </value>
                <value>
                    <fullName>Operational Performance</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Project not Lost but transferred to other SFDC Project</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Relation</fullName>
                </value>
                <value>
                    <fullName>Specification</fullName>
                </value>
                <value>
                    <fullName>Stopped by Customer</fullName>
                </value>
                <value>
                    <fullName>Software/Operating System</fullName>
                </value>
                <value>
                    <fullName>Time to Market</fullName>
                </value>
                <value>
                    <fullName>Wrong Entry</fullName>
                </value>
                <value>
                    <fullName>Company Out of Business</fullName>
                </value>
                <value>
                    <fullName>Duplicate of Existing Opty</fullName>
                </value>
                <value>
                    <fullName>MPN EOL</fullName>
                </value>
                <value>
                    <fullName>No Bid</fullName>
                </value>
                <value>
                    <fullName>No Commercial Relations</fullName>
                </value>
                <value>
                    <fullName>No Cust Contact Response</fullName>
                </value>
                <value>
                    <fullName>Not a Valid Cust/Project</fullName>
                </value>
                <value>
                    <fullName>Project Cancelled by Cust</fullName>
                </value>
                <value>
                    <fullName>Project Delayed by Cust</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MAG_10_CV__c</fullName>
        <description>Claim Value of MAG #10</description>
        <label>z_OBSOLETED_MAG 10 CV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAG_1_CV__c</fullName>
        <description>Claim Value of MAG #1</description>
        <label>z_OBSOLETED_MAG 1 CV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAG_2_CV__c</fullName>
        <description>Claim Value of MAG #2</description>
        <label>z_OBSOLETED_MAG 2 CV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAG_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to populate MAG Approvers</description>
        <label>MAG Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesFFzx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MAG_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to populate MAG Approvers</description>
        <label>MAG Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MAG_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to populate MAG Approvers</description>
        <label>MAG Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MAG_R01_Subtotal__c</fullName>
        <description>This field is part of Opportunity/Opportunity Product fields phase-1 deletion. But unable to delete this fields as we are unable to delete the inactive approval processes in which this field is referenced as data is associated with them. So just renaming the field label to obsolete this field.</description>
        <label>z_OBSOLETED_MAG R01 Subtotal</label>
        <summarizedField>OpportunityLineItem.Product_Design_Win_Claim_Value_USD1__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.MAG_for_Roll_Up__c</field>
            <operation>equals</operation>
            <value>R01</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MAG_R05_Subtotal__c</fullName>
        <description>This field is part of Opportunity/Opportunity Product fields phase-1 deletion. But unable to delete this fields as we are unable to delete the inactive approval processes in which this field is referenced as data is associated with them. So just renaming the field label to obsolete this field.</description>
        <label>z_OBSOLETED_MAG R05 Subtotal</label>
        <summarizedField>OpportunityLineItem.Product_Design_Win_Claim_Value_USD1__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.MAG_for_Roll_Up__c</field>
            <operation>equals</operation>
            <value>R05</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MAG_R07_Subtotal__c</fullName>
        <description>This field is part of Opportunity/Opportunity Product fields phase-1 deletion. But unable to delete this fields as we are unable to delete the inactive approval processes in which this field is referenced as data is associated with them. So just renaming the field label to obsolete this field.</description>
        <label>z_OBSOLETED_MAG R07 Subtotal</label>
        <summarizedField>OpportunityLineItem.Product_Design_Win_Claim_Value_USD1__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.MAG_for_Roll_Up__c</field>
            <operation>equals</operation>
            <value>R07</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>